@@ -11,10 +11,10 @@ import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.GC;
 import org.eclipse.swt.widgets.Display;
 import org.swtchart.Chart;
+import org.swtchart.IAxis.Direction;
 import org.swtchart.ILineSeries;
 import org.swtchart.LineStyle;
 import org.swtchart.Range;
-import org.swtchart.IAxis.Direction;
 import org.swtchart.internal.Util;
 import org.swtchart.internal.axis.Axis;
 import org.swtchart.internal.compress.CompressLineSeries;
@@ -53,9 +53,6 @@ public class LineSeries extends Series implements ILineSeries
 	/** the state indicating if step chart is enabled */
 	private boolean stepEnabled;
 
-	/** the anti-aliasing value for drawing line */
-	private int antialias;
-
 	/** the alpha value to draw area */
 	private static final int ALPHA = 50;
 
@@ -76,9 +73,6 @@ public class LineSeries extends Series implements ILineSeries
 
 	/** the default symbol type */
 	private static final PlotSymbolType DEFAULT_SYMBOL_TYPE = PlotSymbolType.CIRCLE;
-
-	/** the default anti-aliasing value */
-	private static final int DEFAULT_ANTIALIAS = SWT.DEFAULT;
 
 	/** the margin in pixels attached at the minimum/maximum plot */
 	//private static final int MARGIN_AT_MIN_MAX_PLOT = 6;
@@ -104,7 +98,6 @@ public class LineSeries extends Series implements ILineSeries
 
 		areaEnabled = false;
 
-		antialias = DEFAULT_ANTIALIAS;
 		lineWidth = DEFAULT_LINE_WIDTH;
 
 		compressor = new CompressLineSeries();
@@ -381,26 +374,6 @@ public class LineSeries extends Series implements ILineSeries
 		*/
 	}
 
-	/*
-	 * @see ILineSeries#getAntialias()
-	 */
-	public int getAntialias()
-	{
-		return antialias;
-	}
-
-	/*
-	 * @see ILineSeries#setAntialias(int)
-	 */
-	public void setAntialias(int antialias)
-	{
-		if (antialias != SWT.DEFAULT && antialias != SWT.ON && antialias != SWT.OFF)
-		{
-			SWT.error(SWT.ERROR_INVALID_ARGUMENT);
-		}
-		this.antialias = antialias;
-	}
-
 	/**
 	 * Gets the line points to draw line and area.
 	 * 
@@ -466,9 +439,8 @@ public class LineSeries extends Series implements ILineSeries
 	@Override
 	protected void draw(GC gc, int width, int height, Axis xAxis, Axis yAxis)
 	{
-		int oldAntialias = gc.getAntialias();
 		int oldLineWidth = gc.getLineWidth();
-		gc.setAntialias(antialias);
+		gc.setAntialias(SWT.ON);
 		gc.setLineWidth(lineWidth);
 
 		if (lineStyle != LineStyle.NONE)
@@ -481,7 +453,6 @@ public class LineSeries extends Series implements ILineSeries
 			drawSymbolAndLabel(gc, width, height, xAxis, yAxis);
 		}
 
-		gc.setAntialias(oldAntialias);
 		gc.setLineWidth(oldLineWidth);
 	}
 
@@ -636,7 +607,6 @@ public class LineSeries extends Series implements ILineSeries
 	 */
 	private void drawSymbolAndLabel(GC gc, int width, int height, Axis xAxis, Axis yAxis)
 	{
-
 		// get x and y series
 		double[] xseries = compressor.getCompressedXSeries();
 		double[] yseries = compressor.getCompressedYSeries();
